# few-shots-pipeline

./: .gitignore  README.md  pyproject.toml  pytest.ini
config/: default.yaml
scripts/: download_models.py
src/fspipeline/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/fspipeline/stages/: __init__.py  asr_dual.py  audio_extract.py  base.py  denoise.py  llm_correct.py  speaker_extract.py  speaker_filter.py  speaker_trim.py  vad_segment.py  vad_trim.py
src/fspipeline/utils/: audio.py  text.py
tests/: conftest.py  test_audio_utils.py  test_config_models.py  test_stages.py  test_text_utils.py
